# Unoffical-PadelMates-API-Intergration-Tool

./: .env.example  .gitignore  GetBookingData  LICENSE  README.md  pyproject.toml  server.py
examples/: padelmates_cache.sample.json  playtomic_cache.sample.json
scripts/: fetch_padelmates_bookings.py
static/: app.js  index.html  manifest.json  service-worker.js  styles.css
tests/: test_fetch_padelmates_bookings.py  test_server.py
